@@ -72,7 +72,7 @@ allprojects {
   apply plugin: "build-time-tracker"
 
   group = 'io.snappydata'
-  version = '1.1.0-HF-1'
+  version = '1.1.1'
 
   // apply compiler options
   tasks.withType(JavaCompile) {
@@ -108,7 +108,7 @@ allprojects {
     scalaBinaryVersion = '2.11'
     scalaVersion = scalaBinaryVersion + '.8'
     sparkVersion = '2.1.1'
-    snappySparkVersion = '2.1.1.6'
+    snappySparkVersion = '2.1.1.7'
     sparkDistName = "spark-${sparkVersion}-bin-hadoop2.7"
     sparkCurrentVersion = '2.3.2'
     sparkCurrentDistName = "spark-${sparkCurrentVersion}-bin-hadoop2.7"
@@ -151,10 +151,10 @@ allprojects {
     antlr2Version = '2.7.7'
 
     pegdownVersion = '1.6.0'
-    snappyStoreVersion = '1.6.3'
+    snappyStoreVersion = '1.6.4'
     snappydataVersion = version
     pulseVersion = '1.5.1'
-    zeppelinInterpreterVersion = '0.7.3.5'
+    zeppelinInterpreterVersion = '0.7.3.6'
 
     buildFlags = ''
     createdBy = System.getProperty('user.name')
@@ -165,7 +165,7 @@ allprojects {
     buildDate = new Date().format('yyyy-MM-dd HH:mm:ss Z')
     buildNumber = new Date().format('MMddyy')
     jdkVersion = System.getProperty('java.version')
-    sparkJobServerVersion = '0.6.2.9'
+    sparkJobServerVersion = '0.6.2.10'
     eclipseCollectionsVersion = '9.2.0'
     fastutilVersion = '8.2.2'
 
@@ -279,6 +279,11 @@ task cleanScalaTest { doLast {
 } }
 task cleanJUnit { doLast {
   String workingDir = "${testResultsBase}/junit"
+  delete workingDir
+  file(workingDir).mkdirs()
+} }
+task cleanRecoveryTest { doLast {
+  String workingDir = "${testResultsBase}/recoveryTest"
   delete workingDir
   file(workingDir).mkdirs()
 } }
@@ -450,6 +455,62 @@ subprojects {
       def progress = new File(workingDir, 'progress.txt')
       numTestClasses = getCandidateClassFiles().getFiles().size()
       progress << "${eol}${now} ========== STARTING DUNIT TEST SUITE FOR ${project.name} ==========${eol}${eol}"
+    }
+    beforeSuite { desc ->
+      if (desc.className != null) {
+        def count = testCount.incrementAndGet()
+        println "${now()} Start ${desc.className} ($count/$numTestClasses)"
+      }
+    }
+    afterSuite { desc, result ->
+      if (desc.className != null) {
+        println "${now()} END ${desc.className}"
+      }
+    }
+  }
+
+  task recoveryTest(type: Test) {
+    dependsOn ':cleanRecoveryTest'
+    dependsOn ':product'
+    dependsOn ':copyShadowJars'
+
+    maxParallelForks = 1
+    minHeapSize '4g'
+    maxHeapSize '4g'
+
+    // limit netty buffer arenas to avoid occasional OOMEs with 1.5g heap
+    int numArenas = Math.min(8, Runtime.getRuntime().availableProcessors())
+    jvmArgs = ['-XX:+HeapDumpOnOutOfMemoryError',
+               '-XX:+UseParNewGC', '-XX:+UseConcMarkSweepGC',
+               '-XX:CMSInitiatingOccupancyFraction=50',
+               '-XX:+CMSClassUnloadingEnabled', '-ea',
+               '-Dspark.sql.codegen.cacheSize=1000',
+               '-Dspark.ui.retainedStages=500',
+               '-Dspark.ui.retainedJobs=500',
+               '-Dspark.sql.ui.retainedExecutions=500',
+               '-Dio.netty.allocator.pageSize=8192',
+               '-Dio.netty.allocator.maxOrder=10',
+               "-Dio.netty.allocator.numHeapArenas=${numArenas}",
+               "-Dio.netty.allocator.numDirectArenas=${numArenas}"]
+
+    workingDir = "${testResultsBase}/recoveryTest"
+    systemProperties 'java.net.preferIPv4Stack': 'true',
+        'SNAPPY_HOME': snappyProductDir,
+        'RECOVERY_TEST_DIR': workingDir
+
+    binResultsDir = file("${workingDir}/binary/${project.name}")
+    reports.html.destination = file("${workingDir}/html/${project.name}")
+    reports.junitXml.destination = file(workingDir)
+
+    int numTestClasses = 0
+    def testCount = new java.util.concurrent.atomic.AtomicInteger(0)
+
+    doFirst {
+      String eol = System.getProperty('line.separator')
+      String now = new Date().format('yyyy-MM-dd HH:mm:ss.SSS Z')
+      def progress = new File(workingDir, 'progress.txt')
+      numTestClasses = getCandidateClassFiles().getFiles().size()
+      progress << "${eol}${now} ========== STARTING RECOVERY TEST SUITE FOR ${project.name} ==========${eol}${eol}"
     }
     beforeSuite { desc ->
       if (desc.className != null) {
@@ -662,7 +723,11 @@ gradle.taskGraph.whenReady { graph ->
     dunitSecSingle = rootProject.hasProperty('dunitSecurity.single') ?
         rootProject.property('dunitSecurity.single') : null
   }
-
+  String recoverySingle = System.getProperty('recovery.single')
+  if (recoverySingle == null || recoverySingle.length() == 0) {
+    recoverySingle = rootProject.hasProperty('recovery.single') ?
+        rootProject.property('recovery.single') : null
+  }
   def allTasks = subprojects.collect { it.tasks }.flatten()
   allTasks.each { task ->
     if (task instanceof Tar) {
@@ -686,7 +751,8 @@ gradle.taskGraph.whenReady { graph ->
               includes = [ '**/*DUnitTest.class', '**/*DUnit.class' ]
               excludes = [ '**/*Suite.class', '**/*DUnitSecurityTest.class', '**/NCJ*DUnit.class', '**/*HDFS*DUnit*.class',
                   '**/BackwardCompatabilityPart*DUnit.class', '**/*Perf*DUnit.class', '**/ListAggDUnit.class',
-                  '**/SingleHop*TransactionDUnit.class', '**/*Parallel*AsyncEvent*DUnit.class', '**/pivotal/gemfirexd/wan/**/*DUnit.class' ]
+                  '**/SingleHop*TransactionDUnit.class', '**/*Parallel*AsyncEvent*DUnit.class',
+                           '**/pivotal/gemfirexd/wan/**/*DUnit.class', '**/*DUnitRecoveryTest.class' ]
             }
             FileTree includeTestFiles = dunitTests
             int dunitFrom = rootProject.hasProperty('dunit.from') ?
@@ -713,7 +779,7 @@ gradle.taskGraph.whenReady { graph ->
           } else if (dunitSecSingle == null || dunitSecSingle.length() == 0) {
             def dunitSecurityTests = testClassesDirs.asFileTree.matching {
               includes = [ '**/*DUnitSecurityTest.class' ]
-              excludes = [ '**/*Suite.class', '**/*DUnitTest.class', '**/*DUnit.class' ]
+              excludes = [ '**/*Suite.class', '**/*DUnitTest.class', '**/*DUnit.class', '**/*DUnitRecoveryTest.class' ]
             }
             FileTree includeTestFiles = dunitSecurityTests
             int dunitFrom = rootProject.hasProperty('dunitSecurity.from') ?
@@ -731,6 +797,23 @@ gradle.taskGraph.whenReady { graph ->
             include filteredSet
           } else {
             include dunitSecSingle
+          }
+        } else if (test.name == 'recoveryTest') {
+          includes.clear()
+          excludes.clear()
+          if (!rootProject.hasProperty('snappydata.enterprise')) {
+            excludes = [ '**/*Suite.class', '**/*DUnitSecurityTest.class', '**/*DUnitTest.class', '**/*DUnit.class' ]
+          } else if (recoverySingle == null || recoverySingle.length() == 0) {
+            def recoveryTests = testClassesDirs.asFileTree.matching {
+              includes = [ '**/*DUnitRecoveryTest.class' ]
+              excludes = [ '**/*Suite.class', '**/*DUnitSecurityTest.class', '**/NCJ*DUnit.class', '**/*HDFS*DUnit*.class',
+                           '**/BackwardCompatabilityPart*DUnit.class', '**/*Perf*DUnit.class', '**/ListAggDUnit.class',
+                           '**/SingleHop*TransactionDUnit.class', '**/*Parallel*AsyncEvent*DUnit.class', '**/pivotal/gemfirexd/wan/**/*DUnit.class', '**/*Suite.class', '**/*DUnitTest.class', '**/*DUnit.class' ]
+            }
+            FileTree includeTestFiles = recoveryTests
+            include includeTestFiles.collect {f -> "**/" + f.name}
+          } else {
+            include recoverySingle
           }
         }
 
